# LANPONG

./: .gitignore  .pre-commit-config.yaml  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  DOCS.md  MANIFEST.in  Makefile  README.md  docs.md  mkdocs.yml  pyproject.toml  setup.py  test_key  test_key.pub
.github/: rename_project.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
lanpong/: __main__.py  base.py  cli.py  main.py
lanpong/game/: game.py  leaderboard.py
lanpong/screens/: start_screen.py
lanpong/server/: db.py  ping.py  server.py  ssh.py  users.json
tests/: test_base.py
