[tool.poetry]
name = "lanpong"
version = "0.1.0"
description = ""
authors = ["Pedram Haqiqi", "Sam Prokopchuk", "Mark Chen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncssh = "^2.14.1"
paramiko = "^3.3.1"
numpy = "^1.26.2"
sortedcontainers = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
flake8 = "^6.1.0"
black = "23.11.0"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
gitchangelog = "^3.0.4"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lanpong = 'lanpong.__main__:main'
